--- a/index.html
+++ b/index.html
@@ -383,6 +383,21 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
 #proposeOpenBtn:hover { background: #2c7a7b; }
 
 /* --------------------------------------------------
+   レシピ提案ボタン
+   -------------------------------------------------- */
+#proposeOpenBtn {
+  background: #38b2ac;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 8px;
+  padding: 9px 14px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+#proposeOpenBtn:hover { background: #2c7a7b; }
+
+/* --------------------------------------------------
    モーダル（オーバーレイ）
    -------------------------------------------------- */
 #proposeModal {
